# pg-dumps-minio

./: .env.dist  .gitignore  main.py  pyproject.toml  readme.MD  requirements-old.txt  requirements.txt  settings.py
pg_dumps_minio/: __init__.py  exporter.py  pg_manager.py  utils.py
